--- a/embed.html
+++ b/embed.html
@@ -183,7 +183,7 @@ $(document).ready(function () {
   <a href="index.html">Home</a>
 </li>
 <li>
-  <a href="project.html">Create a Project</a>
+  <a href="project.html">Delete this!</a>
 </li>
 <li>
   <a href="build.html">Set Build Options</a>
@@ -227,7 +227,7 @@ $(document).ready(function () {
 
 <p>Here is an example of embedding a web page. In this case it is a Tableau workbook. You may want to adjust the width and height. This will work but will not be visible until you view it in a browser (and may take some time to load).</p>
 <p>When embedding Tableau you may want to play with the size of the workbook itself. Review knitr options. For ebooks with bookdown see <a href="https://bookdown.org/yihui/bookdown/web-pages-and-shiny-apps.html">here</a></p>
-<iframe align = "center" width = "1000" height = "1000" src="https://public.tableau.com/profile/poldham#!/vizhome/algeria_patents_updated_19082016/SpeciesOverview"/>
+<iframe align = "center" width = "1000" height = "1000" src="https://public.tableau.com/profile/kay.siong#!/vizhome/Pizza_10/Story1"/>
 
 
 
