--- a/publishing.html
+++ b/publishing.html
@@ -183,7 +183,7 @@ $(document).ready(function () {
   <a href="index.html">Home</a>
 </li>
 <li>
-  <a href="project.html">Create a Project</a>
+  <a href="project.html">Delete this!</a>
 </li>
 <li>
   <a href="build.html">Set Build Options</a>
